--- a/BookMarket/static/sass/theme/_banner.scss
+++ b/BookMarket/static/sass/theme/_banner.scss
@@ -4,20 +4,38 @@
 	background: url(../img/banner/banner-bg.jpg) center no-repeat;
 	background-size: cover;
 	position: relative;
+	text-align: center;
+	align-content: center;
 
-	@media (max-width: 767px) {
-		margin-top: 60px;
-	}
-	@media (max-width: 570px) {
-		margin-top: 60px;
-	}
-	@media (max-width: 480px) {
+	@media (max-width: 1382px) {
 		margin-top: 60px; 
 	}
+	@media (max-width: 768px) {
+		margin-top: 60px;
+	}
+	@media (max-width: 320px) {
+		margin-top: 60px;
+	}
 
+	.banner-row {
+		margin: 0 120px;
+
+		@media (max-width: 1382px) {
+			margin: 0 !important; 
+		}
+		@media (max-width: 768px) {
+			margin: 0 !important; 
+		}
+		@media (max-width: 320px) {
+			margin: 0 !important; 
+		}
+	}
+	.self-center {
+		align-self: center;
+	}
 	.fullscreen {
 		@media (max-width: 768px) {
-			height: 650px !important;
+			/*height: 650px !important;*/
 		}
 	}
 	.active-banner-slider {
@@ -48,9 +66,16 @@
 	}
 	.banner-content {
 		background: $offwhite;
-		padding: 10vw 35vh;
-		@media (max-width: 991px) {
-			padding-left: 0;
+		padding: 200px;
+
+		@media (max-width: 1382px) {
+			padding: 50px 180px !important; 
+		}
+		@media (max-width: 768px) {
+			padding: 30px 80px !important;
+		}
+		@media (max-width: 320px) {
+			padding: 15px !important;
 		}
 		h1 {
 			font-size: 60px;
@@ -67,8 +92,18 @@
 		}
 	}
 	.banner-img {
-		@media (max-width: 991px) {
-			display: none;
+
+		@media (max-width: 1382px) {
+			width: 100%;
+			padding-top: 20px !important; 
+		}
+		@media (max-width: 768px) {
+			width: 100%;
+			padding-top: 20px !important;
+		}
+		@media (max-width: 320px) {
+			width: 100%;
+			padding-top: 30px !important;
 		}
 	}
 }
@@ -100,8 +135,9 @@
 //------- Start Bread Crumb --------//
 
 .organic-breadcrumb {
-	background-image: linear-gradient(to right bottom, rgba(135, 206, 235, 0.8), rgba(0, 191, 255, 0.8)), url(../img/banner/common-banner.jpg);
-	background-size: cover;
+	background-image: linear-gradient(to right bottom, rgba(135, 206, 235, 0.8), rgba(0, 191, 255, 0.8)), url(../img/banner/banner-img1.svg);
+	background-size: contain;
+	background-position: right;
 	padding-top: 160px;
 	margin-bottom: 50px;
 	@media (max-width: 991px) {
