--- a/BookMarket/static/sass/theme/_footer.scss
+++ b/BookMarket/static/sass/theme/_footer.scss
@@ -1,6 +1,7 @@
 //--------- start footer Area -------------//
 
 .footer-area {
+	overflow-x: hidden;
 	padding-top: 100px;
 	background-color: #222222;
 	position: relative;
