--- a/BookMarket/static/sass/theme/_header.scss
+++ b/BookMarket/static/sass/theme/_header.scss
@@ -15,7 +15,7 @@
 }
 .sticky-wrapper {
     position: absolute;
-    top: 40px;
+    top: 0;
     width: 100%;
     @media (max-width: 1200px) {
         top: 0;
